# onvif-media-transcoder

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  copilot-instructions.md  deny.toml  docker-compose.hub.yml  entrypoint.sh  mediamtx.yml  publish.sh  quick-start.sh  run-local.sh
.github/workflows/: ci.yml  docker-publish-optimized.yml  docker-publish.yml  release.yml
docs/: LOCAL_DEVELOPMENT.md
examples/: .env.example  README.md  docker-compose.local.yml  docker-compose.yml
scripts/: README.md  env-setup.sh  run-local.sh
src/: config.rs  lib.rs  main.rs  onvif_endpoints.rs  onvif_responses.rs  ws_discovery.rs
src/onvif/: mod.rs  responses.rs  soap.rs
tests/: auth_tests.rs  config_tests.rs  integration_test.rs  response_tests.rs  rtsp_tests.rs  ws_discovery_tests.rs
