[package]
name = "onvif-media-transcoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "onvif_media_transcoder"
path = "src/lib.rs"

[[bin]]
name = "onvif-media-transcoder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
md5 = "0.8"
sha1 = "0.10"
image = "0.25.6"
tempfile = "3.20.0"
signal-hook = "0.3.18"

[dev-dependencies]
serial_test = "3.0"
