[package]
name = "onvif-media-transcoder"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "onvif-media-transcoder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
md5 = "0.8"
sha1 = "0.10.6"
image = "0.25.9"
tempfile = "3.23.0"
signal-hook = "0.3.18"
clap = { version = "4.5.52", features = ["derive"] }

[dev-dependencies]
serial_test = "3.2.0"
